--- a/index.html
+++ b/index.html
@@ -9,12 +9,56 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+    <style>
+        nav {
+            background-color: #243A78;
+        }
 
-    <title>Hello, world!</title>
+        nav a img {
+            max-height: 10vh;
+        }
+
+        /* nav button {
+            border-color: white !important;
+        } */
+    </style>
+
+    <title>Dunder Mifflin</title>
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
+        <a class="navbar-brand" href="">
+            <img src="http://static.wixstatic.com/media/84c148_1d100f1738a146c2a9a911e133b6269c~mv2.png/v1/fill/w_419,h_400,al_c,q_80,usm_0.66_1.00_0.01/84c148_1d100f1738a146c2a9a911e133b6269c~mv2.webp"
+                alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="nav navbar-nav ml-auto">
+                <li>
+                    <a href="" class="nav-item nav-link">Home</a>
+                </li>
+                <li>
+                    <a href="#about" class="nav-item nav-link">About</a>
+                </li>
+                <li>
+                    <a href="#staff" class="nav-item nav-link">Our Staff</a>
+                </li>
+                <li>
+                    <a href="#order" class="nav-item nav-link">Order</a>
+                </li>
+                <li>
+                    <a href="#contact" class="nav-item nav-link">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- END NAVBAR -->
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
