--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <style>
-        nav {
+        /* nav {
             background-color: #243A78;
-        }
+        } */
 
         nav a img {
             max-height: 10vh;
         }
 
-        /* nav button {
-            border-color: white !important;
-        } */
+        .banner {
+            height: 85vh;
+            background-image: linear-gradient( to right bottom,
+            rgba(100, 100, 100, 0.8),
+            rgba(100, 100, 100, 0.8)),
+            url("assets/img/dunderBuilding.jpg");
+            background-size: cover;
+            background-position: top;
+            background-position: center;
+            -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+        }
     </style>
 
     <title>Dunder Mifflin</title>
@@ -28,7 +37,7 @@
 
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
+    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
         <a class="navbar-brand" href="">
             <img src="http://static.wixstatic.com/media/84c148_1d100f1738a146c2a9a911e133b6269c~mv2.png/v1/fill/w_419,h_400,al_c,q_80,usm_0.66_1.00_0.01/84c148_1d100f1738a146c2a9a911e133b6269c~mv2.webp"
                 alt="">
@@ -58,6 +67,11 @@
         </div>
     </nav>
     <!-- END NAVBAR -->
+    <!-- BANNER -->
+    <div class="banner">
+        <!-- <img src="assets/img/dunderBuilding.jpg" alt=""> -->
+    </div>
+    <!-- END BANNER -->
 
 
     <!-- Optional JavaScript -->
