--- a/index.html
+++ b/index.html
@@ -38,8 +38,22 @@
             position: absolute;
             color: white;
             text-shadow: 3px 3px #000000;
+            text-align: center;
         }
 
+        .about h1 {
+            text-align: center;
+            color: blue;
+        }
+
+        .about .row div {
+            margin-top: 10vh;
+        }
+
+        iframe {
+            float: right;
+            margin-top: 5%;
+        }
     </style>
 
     <title>Dunder Mifflin</title>
@@ -85,6 +99,26 @@
         </div>
     </div>
     <!-- END HEADER -->
+    <!-- ABOUT SECTION -->
+    <div class="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>About Dundler Mifflin</h1>
+                    <p>Dunder Mifflin Paper Company, Inc. is a fictional paper sales company featured in the American television
+                        series The Office. It is analogous to Wernham Hogg in the British original of the series, and Papiers
+                        Jennings and Cogirep in the French Canadian and French adaptations respectively. Originally, the
+                        company was completely fictitious, but eventually, the brand was used to sell products at Staples
+                        and other office supply outlets.</p>
+                </div>
+                <div class="col-md-6">
+                    <iframe src="https://www.youtube.com/embed/KY6nM4tUcoA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END ABOUT SECTION -->
+
 
 
 
