start of staff section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
             float: right;
             margin-top: 5%;
         }
+
+        #staff img {
+            width: 150px;
+            height: 225px;
+            /* border-radius: 50%; */
+            background-position: 50% 50%;
+            background-repeat: no-repeat;
+            background-size: cover;
+            transition: 0.3s ease;
+        }
+
+        /* #staff img:hover {
+            transform: scale(1.5, 1.5);
+        } */
     </style>
 
     <title>Dunder Mifflin</title>
@@ -100,7 +114,7 @@
     </div>
     <!-- END HEADER -->
     <!-- ABOUT SECTION -->
-    <div class="about">
+    <div id="about">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -118,8 +132,51 @@
         </div>
     </div>
     <!-- END ABOUT SECTION -->
-
-
+    <!-- STAFF -->
+    <div id="staff">
+        <div class="container">
+            <h1>Our Staff</h1>
+            <div class="row">
+                <div class="col-sm-6 col-md-3">
+                    <h3>Michael Scott</h3>
+                    <img src="https://upload.wikimedia.org/wikipedia/en/d/dc/MichaelScott.png" alt="">
+                    <p>Regional Manager</p>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <h3>Dwight Schrute</h3>
+                    <img src="https://upload.wikimedia.org/wikipedia/en/c/cd/Dwight_Schrute.jpg" alt="">
+                    <p>assistant (to the) regional manager</p>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <h3>Jim Halpert</h3>
+                    <img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Jim-halpert.jpg" alt="">
+                    <p>sales representative</p>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <h3>Pam Beesly Halpert</h3>
+                    <img src="https://upload.wikimedia.org/wikipedia/en/6/67/Pam_Beesley.jpg" alt="">
+                    <p>office administrator</p>
+                </div>
+                <div class="col-sm-6 col-md-3"></div>
+                <!-- <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div>
+        <div class="col-sm-6 col-md-3"></div> -->
+            </div>
+        </div>
+    </div>
+    <!-- END STAFF -->
 
 
     <!-- Optional JavaScript -->
