--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             margin-top: 5%;
         }
 
+        #staff {
+            white-space: nowrap;
+        }
+
         #staff img {
             width: 150px;
             height: 225px;
@@ -68,6 +72,10 @@
         /* #staff img:hover {
             transform: scale(1.5, 1.5);
         } */
+
+        #staff * {
+            text-align: center;
+        }
     </style>
 
     <title>Dunder Mifflin</title>
