better styling to staff section

--- a/index.html
+++ b/index.html
@@ -78,24 +78,31 @@
             <h1>Our Staff</h1>
             <div class="row">
                 <div class="col-sm-6 col-md-3">
-                    <h3>Michael Scott</h3>
                     <img src="https://upload.wikimedia.org/wikipedia/en/d/dc/MichaelScott.png" alt="">
-                    <p>Regional Manager</p>
+                    <p>
+                        <strong>Michael Scott</strong>
+                        <br> Regional Manager</p>
                 </div>
                 <div class="col-sm-6 col-md-3">
-                    <h3>Dwight Schrute</h3>
+
                     <img src="https://upload.wikimedia.org/wikipedia/en/c/cd/Dwight_Schrute.jpg" alt="">
-                    <p>assistant (to the) regional manager</p>
+                    <p>
+                        <strong>Dwight Schrute</strong>
+                        <br> Assistant (to the) Regional Manager</p>
                 </div>
                 <div class="col-sm-6 col-md-3">
-                    <h3>Jim Halpert</h3>
+
                     <img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Jim-halpert.jpg" alt="">
-                    <p>sales representative</p>
+                    <p>
+                        <strong>Jim Halpert</strong>
+                        <br> Sales Representative</p>
                 </div>
                 <div class="col-sm-6 col-md-3">
-                    <h3>Pam Beesly Halpert</h3>
+
                     <img src="https://upload.wikimedia.org/wikipedia/en/6/67/Pam_Beesley.jpg" alt="">
-                    <p>office administrator</p>
+                    <p>
+                        <strong>Pam Beesly Halpert</strong>
+                        <br> Office Administrator</p>
                 </div>
                 <div class="col-sm-6 col-md-3"></div>
                 <!-- <div class="col-sm-6 col-md-3"></div>
