added the rest of the staff

--- a/index.html
+++ b/index.html
@@ -77,49 +77,128 @@
         <div class="container">
             <h1>Our Staff</h1>
             <div class="row">
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-6 col-md-4">
                     <img src="https://upload.wikimedia.org/wikipedia/en/d/dc/MichaelScott.png" alt="">
                     <p>
                         <strong>Michael Scott</strong>
                         <br> Regional Manager</p>
                 </div>
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-6 col-md-4">
 
                     <img src="https://upload.wikimedia.org/wikipedia/en/c/cd/Dwight_Schrute.jpg" alt="">
                     <p>
                         <strong>Dwight Schrute</strong>
                         <br> Assistant (to the) Regional Manager</p>
                 </div>
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-6 col-md-4">
 
                     <img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Jim-halpert.jpg" alt="">
                     <p>
                         <strong>Jim Halpert</strong>
                         <br> Sales Representative</p>
                 </div>
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-6 col-md-4">
 
                     <img src="https://upload.wikimedia.org/wikipedia/en/6/67/Pam_Beesley.jpg" alt="">
                     <p>
                         <strong>Pam Beesly Halpert</strong>
                         <br> Office Administrator</p>
                 </div>
-                <div class="col-sm-6 col-md-3"></div>
-                <!-- <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div>
-        <div class="col-sm-6 col-md-3"></div> -->
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/9/91/Ryan_Howard_%28The_Office%29.jpg" alt="">
+                    <p>
+                        <strong>Ryan Howard</strong>
+                        <br>Office temp</p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/8/84/Andy_Bernard_photoshot.jpg" alt="">
+                    <p>
+                        <strong>Andy Bernard</strong>
+                        <br> Sales Associate</p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/2/23/Stanley_Hudson.jpg" alt="">
+                    <p>
+                        <strong>Stanley James Hudson</strong>
+                        <br>Sales Representative</p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/6/60/Office-1200-baumgartner1.jpg" alt="">
+                    <p>
+                        <strong>Kevin Malone</strong>
+                        <br>Accountant
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/6/6f/Meredith_Palmer.jpg" alt="">
+                    <p>
+                        <strong>Meredith Palmer</strong>
+                        <br>Supplier Relations
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/0/0b/Angela_Martin.jpg" alt="">
+                    <p>
+                        <strong>Angela Martin</strong>
+                        <br>Senior Accountant
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/5/54/Oscar_Martinez_of_The_Office.jpg" alt="">
+                    <p>
+                        <strong>Oscar Martinez</strong>
+                        <br>Accountant</p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/f/ff/Phyllis_Lapin-Vance.jpg" alt="">
+                    <p>
+                        <strong>Phyllis Lapin Vance</strong>
+                        <br>Sales Representative
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/6/69/Kelly_Kapoor.jpg" alt="">
+                    <p>
+                        <strong>Kelly Kapoor</strong>
+                        <br>Customer Service Repressentative
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/1/18/Toby_Flenderson_promo_picture.jpg" alt="">
+                    <p>
+                        <strong>Toby Flenderson</strong>
+                        <br> Humar Resources
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/c/cd/CreedBratton%28TheOffice%29.jpg" alt="">
+                    <p>
+                        <strong>Creed Bratton</strong>
+                        <br>Quality Assurance Director
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/6/65/DarrylPhilbin.jpg" alt="">
+                    <p>
+                        <strong>Darryl Philbin</strong>
+                        <br>Head of Shipping/Distribution</p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/9/93/Erin_Hannon.jpg" alt="">
+                    <p>
+                        <strong>Kelly “Erin” Hannon</strong>
+                        <br>Receptionist
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/c/c2/Gabe_profile_picture.jpg" alt="">
+                    <p>
+                        <strong>Gabe Lewis</strong>
+                        <br>Coordinating Director of Emerging Regions
+                    </p>
+                </div>
+                <div class="col-sm-6 col-md-4"></div>
+                <div class="col-sm-6 col-md-4"></div>
             </div>
         </div>
     </div>
